--- a/Results/Tables/E2Reg_no_balanced.html
+++ b/Results/Tables/E2Reg_no_balanced.html
@@ -1,79 +1,64 @@
 
 <table style="text-align:center"><caption><strong>Experiment 2: Anger levels by treatment with controls</strong></caption>
-<tr><td colspan="9" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="8">Anger levels</td></tr>
-<tr><td></td><td colspan="8" style="border-bottom: 1px solid black"></td></tr>
-<tr><td style="text-align:left"></td><td colspan="8">E1</td></tr>
-<tr><td style="text-align:left"></td><td><em>OLS</em></td><td><em>normal</em></td><td><em>OLS</em></td><td><em>normal</em></td><td><em>OLS</em></td><td><em>normal</em></td><td><em>OLS</em></td><td><em>normal</em></td></tr>
-<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td><td>(6)</td><td>(7)</td><td>(8)</td></tr>
-<tr><td colspan="9" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">T1: Like-Minded</td><td>-0.322</td><td>-0.322</td><td>-0.322</td><td>-0.322</td><td>-0.373</td><td>-0.373</td><td>-0.362</td><td>-0.362</td></tr>
-<tr><td style="text-align:left"></td><td>(0.265)</td><td>(0.265)</td><td>(0.266)</td><td>(0.266)</td><td>(0.266)</td><td>(0.266)</td><td>(0.266)</td><td>(0.266)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">T2: Opposite</td><td>0.741<sup>**</sup></td><td>0.741<sup>**</sup></td><td>0.754<sup>**</sup></td><td>0.754<sup>**</sup></td><td>0.742<sup>**</sup></td><td>0.742<sup>**</sup></td><td>0.738<sup>**</sup></td><td>0.738<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.261)</td><td>(0.261)</td><td>(0.261)</td><td>(0.261)</td><td>(0.261)</td><td>(0.261)</td><td>(0.261)</td><td>(0.261)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Eco Chamber</td><td>0.137</td><td>0.137</td><td>0.131</td><td>0.131</td><td>0.119</td><td>0.119</td><td>0.113</td><td>0.113</td></tr>
-<tr><td style="text-align:left"></td><td>(0.229)</td><td>(0.229)</td><td>(0.228)</td><td>(0.228)</td><td>(0.228)</td><td>(0.228)</td><td>(0.228)</td><td>(0.228)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td>0.369</td><td>0.369</td><td>0.374</td><td>0.374</td><td>0.353</td><td>0.353</td><td>0.313</td><td>0.313</td></tr>
-<tr><td style="text-align:left"></td><td>(0.231)</td><td>(0.231)</td><td>(0.231)</td><td>(0.231)</td><td>(0.231)</td><td>(0.231)</td><td>(0.232)</td><td>(0.232)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">30 to 04 years</td><td>0.012</td><td>0.012</td><td>0.010</td><td>0.010</td><td>0.027</td><td>0.027</td><td>0.044</td><td>0.044</td></tr>
-<tr><td style="text-align:left"></td><td>(0.167)</td><td>(0.167)</td><td>(0.174)</td><td>(0.174)</td><td>(0.173)</td><td>(0.173)</td><td>(0.174)</td><td>(0.174)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">41 to 65 years</td><td>-0.032</td><td>-0.032</td><td>-0.008</td><td>-0.008</td><td>0.015</td><td>0.015</td><td>0.064</td><td>0.064</td></tr>
-<tr><td style="text-align:left"></td><td>(0.167)</td><td>(0.167)</td><td>(0.175)</td><td>(0.175)</td><td>(0.176)</td><td>(0.176)</td><td>(0.178)</td><td>(0.178)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">+66 Years</td><td>0.044</td><td>0.044</td><td>0.073</td><td>0.073</td><td>0.112</td><td>0.112</td><td>0.128</td><td>0.128</td></tr>
-<tr><td style="text-align:left"></td><td>(0.187)</td><td>(0.187)</td><td>(0.195)</td><td>(0.195)</td><td>(0.196)</td><td>(0.196)</td><td>(0.197)</td><td>(0.197)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Media</td><td></td><td></td><td>0.286</td><td>0.286</td><td>0.357</td><td>0.357</td><td>0.370</td><td>0.370</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.944)</td><td>(0.944)</td><td>(0.944)</td><td>(0.944)</td><td>(0.945)</td><td>(0.945)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Postgrado</td><td></td><td></td><td>0.025</td><td>0.025</td><td>0.111</td><td>0.111</td><td>0.120</td><td>0.120</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.947)</td><td>(0.947)</td><td>(0.947)</td><td>(0.947)</td><td>(0.951)</td><td>(0.951)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Sin estudios</td><td></td><td></td><td>0.328</td><td>0.328</td><td>0.402</td><td>0.402</td><td>0.378</td><td>0.378</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(1.320)</td><td>(1.320)</td><td>(1.317)</td><td>(1.317)</td><td>(1.320)</td><td>(1.320)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Superior</td><td></td><td></td><td>0.425</td><td>0.425</td><td>0.505</td><td>0.505</td><td>0.513</td><td>0.513</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.938)</td><td>(0.938)</td><td>(0.937)</td><td>(0.937)</td><td>(0.939)</td><td>(0.939)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Masculino</td><td></td><td></td><td></td><td></td><td>-0.150</td><td>-0.150</td><td>-0.147</td><td>-0.147</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.127)</td><td>(0.127)</td><td>(0.127)</td><td>(0.127)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Otro genero</td><td></td><td></td><td></td><td></td><td>1.200<sup>*</sup></td><td>1.200<sup>*</sup></td><td>1.178<sup>*</sup></td><td>1.178<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.576)</td><td>(0.576)</td><td>(0.577)</td><td>(0.577)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Center wing</td><td></td><td></td><td></td><td></td><td></td><td></td><td>-0.014</td><td>-0.014</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td>(0.219)</td><td>(0.219)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Right-Wing</td><td></td><td></td><td></td><td></td><td></td><td></td><td>-0.323</td><td>-0.323</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td>(0.245)</td><td>(0.245)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Left Wing</td><td></td><td></td><td></td><td></td><td></td><td></td><td>0.103</td><td>0.103</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td>(0.143)</td><td>(0.143)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Like-Minded * High EcoChamber</td><td>0.036</td><td>0.036</td><td>0.032</td><td>0.032</td><td>0.046</td><td>0.046</td><td>0.058</td><td>0.058</td></tr>
-<tr><td style="text-align:left"></td><td>(0.317)</td><td>(0.317)</td><td>(0.317)</td><td>(0.317)</td><td>(0.316)</td><td>(0.316)</td><td>(0.317)</td><td>(0.317)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Opposite* High EcoChamber</td><td>0.455</td><td>0.455</td><td>0.447</td><td>0.447</td><td>0.428</td><td>0.428</td><td>0.412</td><td>0.412</td></tr>
-<tr><td style="text-align:left"></td><td>(0.321)</td><td>(0.321)</td><td>(0.321)</td><td>(0.321)</td><td>(0.320)</td><td>(0.320)</td><td>(0.320)</td><td>(0.320)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Like-minded*High Digit. Citizen</td><td>0.217</td><td>0.217</td><td>0.211</td><td>0.211</td><td>0.246</td><td>0.246</td><td>0.241</td><td>0.241</td></tr>
-<tr><td style="text-align:left"></td><td>(0.332)</td><td>(0.332)</td><td>(0.333)</td><td>(0.333)</td><td>(0.333)</td><td>(0.333)</td><td>(0.333)</td><td>(0.333)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Opposite*High Digit.citizen</td><td>-0.678<sup>*</sup></td><td>-0.678<sup>*</sup></td><td>-0.711<sup>*</sup></td><td>-0.711<sup>*</sup></td><td>-0.711<sup>*</sup></td><td>-0.711<sup>*</sup></td><td>-0.676<sup>*</sup></td><td>-0.676<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.329)</td><td>(0.329)</td><td>(0.329)</td><td>(0.329)</td><td>(0.329)</td><td>(0.329)</td><td>(0.330)</td><td>(0.330)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>4.313<sup>***</sup></td><td>4.313<sup>***</sup></td><td>3.975<sup>***</sup></td><td>3.975<sup>***</sup></td><td>3.963<sup>***</sup></td><td>3.963<sup>***</sup></td><td>3.938<sup>***</sup></td><td>3.938<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.206)</td><td>(0.206)</td><td>(0.953)</td><td>(0.953)</td><td>(0.950)</td><td>(0.950)</td><td>(0.950)</td><td>(0.950)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td colspan="9" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>690</td><td>690</td><td>690</td><td>690</td><td>690</td><td>690</td><td>690</td><td>690</td></tr>
-<tr><td style="text-align:left">R<sup>2</sup></td><td>0.062</td><td></td><td>0.069</td><td></td><td>0.077</td><td></td><td>0.081</td><td></td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.046</td><td></td><td>0.048</td><td></td><td>0.054</td><td></td><td>0.054</td><td></td></tr>
-<tr><td style="text-align:left">Log Likelihood</td><td></td><td>-1,301.765</td><td></td><td>-1,299.181</td><td></td><td>-1,295.986</td><td></td><td>-1,294.367</td></tr>
-<tr><td style="text-align:left">Akaike Inf. Crit.</td><td></td><td>2,627.530</td><td></td><td>2,630.361</td><td></td><td>2,627.972</td><td></td><td>2,630.733</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>1.608 (df = 678)</td><td></td><td>1.607 (df = 674)</td><td></td><td>1.602 (df = 672)</td><td></td><td>1.602 (df = 669)</td><td></td></tr>
-<tr><td style="text-align:left">F Statistic</td><td>4.044<sup>***</sup> (df = 11; 678)</td><td></td><td>3.308<sup>***</sup> (df = 15; 674)</td><td></td><td>3.305<sup>***</sup> (df = 17; 672)</td><td></td><td>2.967<sup>***</sup> (df = 20; 669)</td><td></td></tr>
-<tr><td colspan="9" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="8" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="5">Anger levels</td></tr>
+<tr><td></td><td colspan="5" style="border-bottom: 1px solid black"></td></tr>
+<tr><td style="text-align:left"></td><td colspan="5">E1</td></tr>
+<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">T1: Like-Minded</td><td>0.442</td><td>0.479</td><td>0.477</td><td>0.448</td><td>0.448</td></tr>
+<tr><td style="text-align:left"></td><td>(0.264)</td><td>(0.267)</td><td>(0.263)</td><td>(0.263)</td><td>(0.263)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">T2: Opposite</td><td>1.241<sup>***</sup></td><td>1.292<sup>***</sup></td><td>1.276<sup>***</sup></td><td>1.249<sup>***</sup></td><td>1.249<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.274)</td><td>(0.276)</td><td>(0.272)</td><td>(0.272)</td><td>(0.272)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">High Eco Chamber</td><td>0.143</td><td>0.157</td><td>0.149</td><td>0.131</td><td>0.131</td></tr>
+<tr><td style="text-align:left"></td><td>(0.220)</td><td>(0.221)</td><td>(0.219)</td><td>(0.221)</td><td>(0.221)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td>0.834<sup>***</sup></td><td>0.852<sup>***</sup></td><td>0.835<sup>***</sup></td><td>0.772<sup>**</sup></td><td>0.772<sup>**</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.238)</td><td>(0.239)</td><td>(0.236)</td><td>(0.238)</td><td>(0.238)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">30 to 04 years</td><td>0.023</td><td>0.011</td><td>0.022</td><td>0.053</td><td>0.053</td></tr>
+<tr><td style="text-align:left"></td><td>(0.166)</td><td>(0.174)</td><td>(0.172)</td><td>(0.172)</td><td>(0.172)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">41 to 65 years</td><td>0.044</td><td>0.062</td><td>0.076</td><td>0.125</td><td>0.125</td></tr>
+<tr><td style="text-align:left"></td><td>(0.167)</td><td>(0.175)</td><td>(0.173)</td><td>(0.175)</td><td>(0.175)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">+66 Years</td><td>0.068</td><td>0.085</td><td>0.110</td><td>0.121</td><td>0.121</td></tr>
+<tr><td style="text-align:left"></td><td>(0.185)</td><td>(0.194)</td><td>(0.193)</td><td>(0.194)</td><td>(0.194)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Media</td><td></td><td>0.176</td><td>0.176</td><td>0.151</td><td>0.151</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.151)</td><td>(0.149)</td><td>(0.151)</td><td>(0.151)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Postgrado</td><td></td><td>-0.258</td><td>-0.252</td><td>-0.280</td><td>-0.280</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.215)</td><td>(0.212)</td><td>(0.217)</td><td>(0.217)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Sin estudios</td><td></td><td></td><td>-0.126</td><td>-0.130</td><td>-0.130</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.125)</td><td>(0.125)</td><td>(0.125)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Superior</td><td></td><td></td><td></td><td>0.096</td><td>0.096</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.216)</td><td>(0.216)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Male</td><td></td><td></td><td></td><td>-0.191</td><td>-0.191</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.290)</td><td>(0.290)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Center wing</td><td></td><td></td><td></td><td>0.256</td><td>0.256</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.214)</td><td>(0.214)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Right-Wing</td><td>0.033</td><td>0.008</td><td>0.009</td><td>0.014</td><td>0.014</td></tr>
+<tr><td style="text-align:left"></td><td>(0.315)</td><td>(0.317)</td><td>(0.313)</td><td>(0.314)</td><td>(0.314)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Left Wing</td><td>0.427</td><td>0.413</td><td>0.403</td><td>0.387</td><td>0.387</td></tr>
+<tr><td style="text-align:left"></td><td>(0.316)</td><td>(0.317)</td><td>(0.314)</td><td>(0.315)</td><td>(0.315)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Like-Minded * High EcoChamber</td><td>-0.512</td><td>-0.534</td><td>-0.526</td><td>-0.506</td><td>-0.506</td></tr>
+<tr><td style="text-align:left"></td><td>(0.330)</td><td>(0.332)</td><td>(0.328)</td><td>(0.328)</td><td>(0.328)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Opposite* High EcoChamber</td><td>-1.182<sup>***</sup></td><td>-1.242<sup>***</sup></td><td>-1.209<sup>***</sup></td><td>-1.162<sup>***</sup></td><td>-1.162<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.332)</td><td>(0.334)</td><td>(0.331)</td><td>(0.331)</td><td>(0.331)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">Like-minded*High Digit. Citizen</td><td>3.921<sup>***</sup></td><td>3.829<sup>***</sup></td><td>3.881<sup>***</sup></td><td>3.801<sup>***</sup></td><td>3.801<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.221)</td><td>(0.240)</td><td>(0.241)</td><td>(0.309)</td><td>(0.309)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>679</td><td>679</td><td>679</td><td>679</td><td>679</td></tr>
+<tr><td style="text-align:left">Residual Std. Error</td><td>1.624 (df = 667)</td><td>1.520 (df = 665)</td><td>1.554 (df = 664)</td><td>1.592 (df = 661)</td><td>1.592 (df = 661)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="5" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
 </table>
