--- a/Results/Tables/E1_Balanced_test.html
+++ b/Results/Tables/E1_Balanced_test.html
@@ -4,51 +4,54 @@
 <tr><td></td><td colspan="3" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td>Strong Tie/Validated</td><td>Weak Tie/Misinformation</td><td>Weak Tie/Validated</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td></tr>
-<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">High Echo Chamber</td><td>-0.044</td><td>-0.058</td><td>-0.324</td></tr>
-<tr><td style="text-align:left"></td><td>(0.231)</td><td>(0.236)</td><td>(0.233)</td></tr>
+<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">High Echo Chamber</td><td>-0.003</td><td>0.068</td><td>-0.288</td></tr>
+<tr><td style="text-align:left"></td><td>(0.236)</td><td>(0.232)</td><td>(0.235)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td>-0.205</td><td>-0.078</td><td>-0.012</td></tr>
-<tr><td style="text-align:left"></td><td>(0.238)</td><td>(0.245)</td><td>(0.241)</td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td>0.167</td><td>0.185</td><td>0.195</td></tr>
+<tr><td style="text-align:left"></td><td>(0.243)</td><td>(0.239)</td><td>(0.241)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Men</td><td>0.096</td><td>0.152</td><td>0.261</td></tr>
-<tr><td style="text-align:left"></td><td>(0.225)</td><td>(0.231)</td><td>(0.228)</td></tr>
+<tr><td style="text-align:left">Men</td><td>0.071</td><td>-0.103</td><td>0.159</td></tr>
+<tr><td style="text-align:left"></td><td>(0.229)</td><td>(0.226)</td><td>(0.227)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Other</td><td>-12.965<sup>***</sup></td><td>0.242</td><td>0.587</td></tr>
-<tr><td style="text-align:left"></td><td>(0.00001)</td><td>(0.941)</td><td>(0.938)</td></tr>
+<tr><td style="text-align:left">30 to 40 years</td><td>-0.231</td><td>0.099</td><td>-0.053</td></tr>
+<tr><td style="text-align:left"></td><td>(0.308)</td><td>(0.307)</td><td>(0.311)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">30 to 40 years</td><td>-0.108</td><td>-0.288</td><td>-0.169</td></tr>
-<tr><td style="text-align:left"></td><td>(0.297)</td><td>(0.304)</td><td>(0.304)</td></tr>
+<tr><td style="text-align:left">41 to 65 years</td><td>0.148</td><td>-0.017</td><td>-0.073</td></tr>
+<tr><td style="text-align:left"></td><td>(0.307)</td><td>(0.321)</td><td>(0.323)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">41 to 65 years</td><td>-0.071</td><td>0.147</td><td>-0.098</td></tr>
-<tr><td style="text-align:left"></td><td>(0.311)</td><td>(0.305)</td><td>(0.317)</td></tr>
+<tr><td style="text-align:left">+65 years</td><td>-0.597</td><td>0.118</td><td>0.051</td></tr>
+<tr><td style="text-align:left"></td><td>(0.366)</td><td>(0.344)</td><td>(0.341)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">+65 years</td><td>-0.141</td><td>-0.628</td><td>-0.061</td></tr>
-<tr><td style="text-align:left"></td><td>(0.334)</td><td>(0.360)</td><td>(0.334)</td></tr>
+<tr><td style="text-align:left">Low income</td><td>-0.341</td><td>-1.023</td><td>-0.729</td></tr>
+<tr><td style="text-align:left"></td><td>(0.526)</td><td>(0.523)</td><td>(0.529)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low income</td><td>1.064<sup>*</sup></td><td>0.726</td><td>0.338</td></tr>
-<tr><td style="text-align:left"></td><td>(0.522)</td><td>(0.490)</td><td>(0.492)</td></tr>
+<tr><td style="text-align:left">Low-mid</td><td>-0.404</td><td>-0.685</td><td>-0.596</td></tr>
+<tr><td style="text-align:left"></td><td>(0.505)</td><td>(0.486)</td><td>(0.499)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low-mid</td><td>0.688</td><td>0.287</td><td>0.067</td></tr>
-<tr><td style="text-align:left"></td><td>(0.483)</td><td>(0.450)</td><td>(0.443)</td></tr>
+<tr><td style="text-align:left">Mid-High income</td><td>-0.589</td><td>-0.282</td><td>-0.402</td></tr>
+<tr><td style="text-align:left"></td><td>(0.528)</td><td>(0.499)</td><td>(0.514)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Mid-High income</td><td>0.283</td><td>-0.262</td><td>-0.084</td></tr>
-<tr><td style="text-align:left"></td><td>(0.495)</td><td>(0.467)</td><td>(0.451)</td></tr>
+<tr><td style="text-align:left">Highest</td><td>-0.718</td><td>-0.818</td><td>-0.819</td></tr>
+<tr><td style="text-align:left"></td><td>(0.676)</td><td>(0.648)</td><td>(0.659)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Highest</td><td>0.639</td><td>0.034</td><td>-0.048</td></tr>
-<tr><td style="text-align:left"></td><td>(0.631)</td><td>(0.626)</td><td>(0.608)</td></tr>
+<tr><td style="text-align:left">Center wing</td><td>0.569</td><td>0.230</td><td>-0.202</td></tr>
+<tr><td style="text-align:left"></td><td>(0.432)</td><td>(0.377)</td><td>(0.370)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Center wing</td><td>0.150</td><td>-0.404</td><td>0.412</td></tr>
-<tr><td style="text-align:left"></td><td>(0.371)</td><td>(0.432)</td><td>(0.367)</td></tr>
+<tr><td style="text-align:left">Right-Wing</td><td>0.749</td><td>0.532</td><td>0.104</td></tr>
+<tr><td style="text-align:left"></td><td>(0.584)</td><td>(0.517)</td><td>(0.524)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Right-Wing</td><td>-0.303</td><td>-0.104</td><td>0.058</td></tr>
-<tr><td style="text-align:left"></td><td>(0.435)</td><td>(0.430)</td><td>(0.414)</td></tr>
+<tr><td style="text-align:left">Left-wing</td><td>0.618</td><td>-0.144</td><td>-0.191</td></tr>
+<tr><td style="text-align:left"></td><td>(0.428)</td><td>(0.377)</td><td>(0.364)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Left-wing</td><td>0.343</td><td>0.411</td><td>0.422</td></tr>
-<tr><td style="text-align:left"></td><td>(0.251)</td><td>(0.253)</td><td>(0.256)</td></tr>
+<tr><td style="text-align:left">Undergraduate</td><td>-0.011</td><td>-0.157</td><td>-0.083</td></tr>
+<tr><td style="text-align:left"></td><td>(0.273)</td><td>(0.275)</td><td>(0.279)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>-0.494</td><td>-0.185</td><td>-0.183</td></tr>
-<tr><td style="text-align:left"></td><td>(0.491)</td><td>(0.458)</td><td>(0.451)</td></tr>
+<tr><td style="text-align:left">Graduate</td><td>0.520</td><td>0.405</td><td>0.576</td></tr>
+<tr><td style="text-align:left"></td><td>(0.430)</td><td>(0.418)</td><td>(0.417)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Akaike Inf. Crit.</td><td>1,961.251</td><td>1,961.251</td><td>1,961.251</td></tr>
+<tr><td style="text-align:left">Constant</td><td>-0.275</td><td>0.356</td><td>0.558</td></tr>
+<tr><td style="text-align:left"></td><td>(0.655)</td><td>(0.604)</td><td>(0.608)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
+<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Akaike Inf. Crit.</td><td>1,936.342</td><td>1,936.342</td><td>1,936.342</td></tr>
 <tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="3" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
 </table>
