--- a/Results/Tables/E1_no_balanced.html
+++ b/Results/Tables/E1_no_balanced.html
@@ -3,80 +3,71 @@
 <tr><td></td><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td colspan="4">E3</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">E3TreatAmigo-Misinfo</td><td>-0.060</td><td>-0.116</td><td>-0.094</td><td>-0.097</td></tr>
-<tr><td style="text-align:left"></td><td>(0.406)</td><td>(0.409)</td><td>(0.411)</td><td>(0.417)</td></tr>
+<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">E3TreatAmigo-validado</td><td>-0.529</td><td>-0.506</td><td>-0.531</td><td>-0.535</td></tr>
+<tr><td style="text-align:left"></td><td>(0.429)</td><td>(0.431)</td><td>(0.432)</td><td>(0.438)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatAmigo-validado</td><td>-0.440</td><td>-0.491</td><td>-0.593</td><td>-0.602</td></tr>
-<tr><td style="text-align:left"></td><td>(0.430)</td><td>(0.435)</td><td>(0.442)</td><td>(0.447)</td></tr>
+<tr><td style="text-align:left">E3TreatConocido-Misinfo</td><td>0.055</td><td>0.109</td><td>0.091</td><td>0.099</td></tr>
+<tr><td style="text-align:left"></td><td>(0.407)</td><td>(0.409)</td><td>(0.411)</td><td>(0.417)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-validado</td><td>-0.017</td><td>-0.049</td><td>-0.011</td><td>-0.063</td></tr>
-<tr><td style="text-align:left"></td><td>(0.412)</td><td>(0.413)</td><td>(0.414)</td><td>(0.423)</td></tr>
+<tr><td style="text-align:left">E3TreatConocido-validado</td><td>0.058</td><td>0.079</td><td>0.084</td><td>0.034</td></tr>
+<tr><td style="text-align:left"></td><td>(0.401)</td><td>(0.402)</td><td>(0.403)</td><td>(0.413)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">HomoIndex</td><td>0.808<sup>**</sup></td><td>0.778<sup>**</sup></td><td>0.788<sup>**</sup></td><td>0.789<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.322)</td><td>(0.325)</td><td>(0.328)</td><td>(0.338)</td></tr>
+<tr><td style="text-align:left">HomoIndex</td><td>1.096<sup>***</sup></td><td>1.079<sup>***</sup></td><td>1.041<sup>***</sup></td><td>0.958<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.352)</td><td>(0.353)</td><td>(0.354)</td><td>(0.364)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">DigitIndex</td><td>0.184</td><td>0.148</td><td>0.087</td><td>-0.044</td></tr>
-<tr><td style="text-align:left"></td><td>(0.340)</td><td>(0.342)</td><td>(0.344)</td><td>(0.354)</td></tr>
+<tr><td style="text-align:left">DigitIndex</td><td>-0.252</td><td>-0.222</td><td>-0.241</td><td>-0.443</td></tr>
+<tr><td style="text-align:left"></td><td>(0.362)</td><td>(0.364)</td><td>(0.365)</td><td>(0.376)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">AgeRecod30 a 40 años</td><td>-0.833<sup>***</sup></td><td>-0.916<sup>***</sup></td><td>-0.901<sup>***</sup></td><td>-0.852<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.219)</td><td>(0.230)</td><td>(0.233)</td><td>(0.239)</td></tr>
+<tr><td style="text-align:left">AgeRecod30 a 40 años</td><td>-0.826<sup>***</sup></td><td>-0.896<sup>***</sup></td><td>-0.873<sup>***</sup></td><td>-0.823<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.221)</td><td>(0.232)</td><td>(0.233)</td><td>(0.239)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">AgeRecod41 a 65 años</td><td>-0.869<sup>***</sup></td><td>-0.958<sup>***</sup></td><td>-0.921<sup>***</sup></td><td>-0.800<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.219)</td><td>(0.232)</td><td>(0.235)</td><td>(0.243)</td></tr>
+<tr><td style="text-align:left">AgeRecod41 a 65 años</td><td>-0.897<sup>***</sup></td><td>-0.948<sup>***</sup></td><td>-0.907<sup>***</sup></td><td>-0.785<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.222)</td><td>(0.232)</td><td>(0.234)</td><td>(0.242)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">AgeRecod+66 años</td><td>-0.885<sup>***</sup></td><td>-0.965<sup>***</sup></td><td>-0.897<sup>***</sup></td><td>-0.974<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.246)</td><td>(0.260)</td><td>(0.263)</td><td>(0.271)</td></tr>
+<tr><td style="text-align:left">AgeRecod+66 años</td><td>-0.906<sup>***</sup></td><td>-0.964<sup>***</sup></td><td>-0.889<sup>***</sup></td><td>-0.972<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.248)</td><td>(0.261)</td><td>(0.263)</td><td>(0.271)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EducRecMedia</td><td></td><td>-0.657</td><td>-0.550</td><td>-0.705</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(1.274)</td><td>(1.279)</td><td>(1.282)</td></tr>
+<tr><td style="text-align:left">EducRec2</td><td></td><td>0.293</td><td>0.296</td><td>0.181</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.205)</td><td>(0.206)</td><td>(0.213)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EducRecPostgrado</td><td></td><td>-0.572</td><td>-0.441</td><td>-0.824</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(1.276)</td><td>(1.281)</td><td>(1.290)</td></tr>
+<tr><td style="text-align:left">EducRec3</td><td></td><td>0.037</td><td>0.059</td><td>-0.183</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.290)</td><td>(0.292)</td><td>(0.308)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EducRecSin Estudios</td><td></td><td>0.628</td><td>0.751</td><td>0.471</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(1.769)</td><td>(1.786)</td><td>(1.775)</td></tr>
+<tr><td style="text-align:left">GenRecodMasculino</td><td></td><td></td><td>-0.402<sup>**</sup></td><td>-0.452<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.168)</td><td>(0.174)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">EducRecSuperior</td><td></td><td>-0.323</td><td>-0.207</td><td>-0.470</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(1.264)</td><td>(1.269)</td><td>(1.273)</td></tr>
+<tr><td style="text-align:left">ideologiaNinguno</td><td></td><td></td><td></td><td>-0.096</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.301)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">GenRecodMasculino</td><td></td><td></td><td>-0.416<sup>**</sup></td><td>-0.469<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.168)</td><td>(0.173)</td></tr>
+<tr><td style="text-align:left">ideologiaDerecha</td><td></td><td></td><td></td><td>-0.362</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.424)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">GenRecodOtro</td><td></td><td></td><td>2.155<sup>*</sup></td><td>2.383<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(1.130)</td><td>(1.152)</td></tr>
+<tr><td style="text-align:left">ideologiaIzquierda</td><td></td><td></td><td></td><td>0.892<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.299)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ideologiacentro</td><td></td><td></td><td></td><td>0.112</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.300)</td></tr>
+<tr><td style="text-align:left">E3TreatAmigo-validado:HomoIndex</td><td>-0.502</td><td>-0.431</td><td>-0.371</td><td>-0.469</td></tr>
+<tr><td style="text-align:left"></td><td>(0.502)</td><td>(0.505)</td><td>(0.508)</td><td>(0.524)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ideologiaDerecha</td><td></td><td></td><td></td><td>-0.271</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.360)</td></tr>
+<tr><td style="text-align:left">E3TreatConocido-Misinfo:HomoIndex</td><td>-0.267</td><td>-0.294</td><td>-0.255</td><td>-0.183</td></tr>
+<tr><td style="text-align:left"></td><td>(0.480)</td><td>(0.482)</td><td>(0.484)</td><td>(0.498)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ideologiaIzquierda</td><td></td><td></td><td></td><td>0.967<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.196)</td></tr>
+<tr><td style="text-align:left">E3TreatConocido-validado:HomoIndex</td><td>-0.312</td><td>-0.290</td><td>-0.289</td><td>-0.237</td></tr>
+<tr><td style="text-align:left"></td><td>(0.493)</td><td>(0.494)</td><td>(0.496)</td><td>(0.510)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatAmigo-Misinfo:HomoIndex</td><td>0.287</td><td>0.300</td><td>0.249</td><td>0.164</td></tr>
-<tr><td style="text-align:left"></td><td>(0.477)</td><td>(0.480)</td><td>(0.483)</td><td>(0.497)</td></tr>
+<tr><td style="text-align:left">E3TreatAmigo-validado:DigitIndex</td><td>0.715</td><td>0.631</td><td>0.626</td><td>0.662</td></tr>
+<tr><td style="text-align:left"></td><td>(0.526)</td><td>(0.530)</td><td>(0.532)</td><td>(0.548)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatAmigo-validado:HomoIndex</td><td>-0.243</td><td>-0.154</td><td>-0.112</td><td>-0.283</td></tr>
-<tr><td style="text-align:left"></td><td>(0.478)</td><td>(0.484)</td><td>(0.490)</td><td>(0.506)</td></tr>
+<tr><td style="text-align:left">E3TreatConocido-Misinfo:DigitIndex</td><td>0.419</td><td>0.380</td><td>0.376</td><td>0.456</td></tr>
+<tr><td style="text-align:left"></td><td>(0.498)</td><td>(0.501)</td><td>(0.502)</td><td>(0.515)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-validado:HomoIndex</td><td>0.022</td><td>0.060</td><td>-0.029</td><td>-0.064</td></tr>
-<tr><td style="text-align:left"></td><td>(0.471)</td><td>(0.474)</td><td>(0.478)</td><td>(0.492)</td></tr>
+<tr><td style="text-align:left">E3TreatConocido-validado:DigitIndex</td><td>0.638</td><td>0.613</td><td>0.640</td><td>0.737</td></tr>
+<tr><td style="text-align:left"></td><td>(0.510)</td><td>(0.512)</td><td>(0.513)</td><td>(0.528)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatAmigo-Misinfo:DigitIndex</td><td>-0.438</td><td>-0.365</td><td>-0.323</td><td>-0.389</td></tr>
-<tr><td style="text-align:left"></td><td>(0.496)</td><td>(0.500)</td><td>(0.503)</td><td>(0.515)</td></tr>
+<tr><td style="text-align:left">Constant</td><td>-0.057</td><td>-0.216</td><td>-0.055</td><td>-0.122</td></tr>
+<tr><td style="text-align:left"></td><td>(0.302)</td><td>(0.324)</td><td>(0.332)</td><td>(0.425)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatAmigo-validado:DigitIndex</td><td>0.186</td><td>0.176</td><td>0.276</td><td>0.246</td></tr>
-<tr><td style="text-align:left"></td><td>(0.504)</td><td>(0.511)</td><td>(0.518)</td><td>(0.532)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">E3TreatConocido-validado:DigitIndex</td><td>0.226</td><td>0.268</td><td>0.317</td><td>0.343</td></tr>
-<tr><td style="text-align:left"></td><td>(0.493)</td><td>(0.495)</td><td>(0.498)</td><td>(0.511)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>-0.004</td><td>0.531</td><td>0.570</td><td>0.566</td></tr>
-<tr><td style="text-align:left"></td><td>(0.323)</td><td>(1.306)</td><td>(1.309)</td><td>(1.311)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>690</td><td>690</td><td>690</td><td>690</td></tr>
-<tr><td style="text-align:left">Log Likelihood</td><td>-441.306</td><td>-439.276</td><td>-433.075</td><td>-416.954</td></tr>
-<tr><td style="text-align:left">Akaike Inf. Crit.</td><td>912.612</td><td>916.552</td><td>908.151</td><td>881.909</td></tr>
+<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>679</td><td>679</td><td>679</td><td>679</td></tr>
+<tr><td style="text-align:left">Log Likelihood</td><td>-432.703</td><td>-431.383</td><td>-428.502</td><td>-411.816</td></tr>
+<tr><td style="text-align:left">Akaike Inf. Crit.</td><td>895.405</td><td>896.767</td><td>893.004</td><td>865.631</td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
