--- a/Results/Tables/E2Reg_Balanced.html
+++ b/Results/Tables/E2Reg_Balanced.html
@@ -5,39 +5,39 @@
 <tr><td style="text-align:left"></td><td colspan="6">E1</td></tr>
 <tr><td style="text-align:left"></td><td><em>OLS</em></td><td><em>normal</em></td><td><em>OLS</em></td><td><em>normal</em></td><td><em>OLS</em></td><td><em>normal</em></td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td><td>(6)</td></tr>
-<tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">T1: Like-Minded</td><td>-0.121</td><td>-0.121</td><td>-0.138</td><td>-0.138</td><td>-0.318</td><td>-0.318</td></tr>
-<tr><td style="text-align:left"></td><td>(0.150)</td><td>(0.150)</td><td>(0.150)</td><td>(0.150)</td><td>(0.264)</td><td>(0.264)</td></tr>
+<tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">T1: Like-Minded</td><td>0.138</td><td>0.138</td><td>0.155</td><td>0.155</td><td>0.327</td><td>0.327</td></tr>
+<tr><td style="text-align:left"></td><td>(0.151)</td><td>(0.151)</td><td>(0.151)</td><td>(0.151)</td><td>(0.266)</td><td>(0.266)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">T2: Opposite</td><td>0.577<sup>***</sup></td><td>0.577<sup>***</sup></td><td>0.557<sup>***</sup></td><td>0.557<sup>***</sup></td><td>0.748<sup>**</sup></td><td>0.748<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.152)</td><td>(0.152)</td><td>(0.151)</td><td>(0.151)</td><td>(0.260)</td><td>(0.260)</td></tr>
+<tr><td style="text-align:left">T2: Opposite</td><td>0.693<sup>***</sup></td><td>0.693<sup>***</sup></td><td>0.692<sup>***</sup></td><td>0.692<sup>***</sup></td><td>1.071<sup>***</sup></td><td>1.071<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.152)</td><td>(0.152)</td><td>(0.152)</td><td>(0.152)</td><td>(0.275)</td><td>(0.275)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Eco Chamber</td><td></td><td></td><td>0.297<sup>*</sup></td><td>0.297<sup>*</sup></td><td>0.134</td><td>0.134</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.130)</td><td>(0.130)</td><td>(0.227)</td><td>(0.227)</td></tr>
+<tr><td style="text-align:left">High Eco Chamber</td><td></td><td></td><td>0.272<sup>*</sup></td><td>0.272<sup>*</sup></td><td>0.098</td><td>0.098</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.130)</td><td>(0.130)</td><td>(0.221)</td><td>(0.221)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td></td><td></td><td>0.210</td><td>0.210</td><td>0.372</td><td>0.372</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.135)</td><td>(0.135)</td><td>(0.230)</td><td>(0.230)</td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td></td><td></td><td>0.209</td><td>0.209</td><td>0.618<sup>**</sup></td><td>0.618<sup>**</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.136)</td><td>(0.136)</td><td>(0.239)</td><td>(0.239)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Like-Minded * High EcoChamber</td><td></td><td></td><td></td><td></td><td>0.040</td><td>0.040</td></tr>
+<tr><td style="text-align:left">Like-Minded * High EcoChamber</td><td></td><td></td><td></td><td></td><td>0.035</td><td>0.035</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.316)</td><td>(0.316)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Opposite* High EcoChamber</td><td></td><td></td><td></td><td></td><td>0.454</td><td>0.454</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.320)</td><td>(0.320)</td></tr>
+<tr><td style="text-align:left">Opposite* High EcoChamber</td><td></td><td></td><td></td><td></td><td>0.498</td><td>0.498</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.316)</td><td>(0.316)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Like-minded*High Digit. Citizen</td><td></td><td></td><td></td><td></td><td>0.208</td><td>0.208</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.330)</td><td>(0.330)</td></tr>
+<tr><td style="text-align:left">Like-minded*High Digit. Citizen</td><td></td><td></td><td></td><td></td><td>-0.247</td><td>-0.247</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.331)</td><td>(0.331)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Opposite*High Digit.citizen</td><td></td><td></td><td></td><td></td><td>-0.684<sup>*</sup></td><td>-0.684<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.328)</td><td>(0.328)</td></tr>
+<tr><td style="text-align:left">Opposite*High Digit.citizen</td><td></td><td></td><td></td><td></td><td>-0.970<sup>**</sup></td><td>-0.970<sup>**</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td>(0.334)</td><td>(0.334)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>4.600<sup>***</sup></td><td>4.600<sup>***</sup></td><td>4.330<sup>***</sup></td><td>4.330<sup>***</sup></td><td>4.314<sup>***</sup></td><td>4.314<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.107)</td><td>(0.107)</td><td>(0.136)</td><td>(0.136)</td><td>(0.177)</td><td>(0.177)</td></tr>
+<tr><td style="text-align:left">Constant</td><td>4.461<sup>***</sup></td><td>4.461<sup>***</sup></td><td>4.187<sup>***</sup></td><td>4.187<sup>***</sup></td><td>3.988<sup>***</sup></td><td>3.988<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.107)</td><td>(0.107)</td><td>(0.142)</td><td>(0.142)</td><td>(0.199)</td><td>(0.199)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>690</td><td>690</td><td>690</td><td>690</td><td>690</td><td>690</td></tr>
-<tr><td style="text-align:left">R<sup>2</sup></td><td>0.034</td><td></td><td>0.049</td><td></td><td>0.061</td><td></td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.031</td><td></td><td>0.044</td><td></td><td>0.050</td><td></td></tr>
-<tr><td style="text-align:left">Log Likelihood</td><td></td><td>-1,311.735</td><td></td><td>-1,306.179</td><td></td><td>-1,301.856</td></tr>
-<tr><td style="text-align:left">Akaike Inf. Crit.</td><td></td><td>2,629.470</td><td></td><td>2,622.358</td><td></td><td>2,621.711</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>1.621 (df = 687)</td><td></td><td>1.610 (df = 685)</td><td></td><td>1.605 (df = 681)</td><td></td></tr>
-<tr><td style="text-align:left">F Statistic</td><td>12.108<sup>***</sup> (df = 2; 687)</td><td></td><td>8.915<sup>***</sup> (df = 4; 685)</td><td></td><td>5.561<sup>***</sup> (df = 8; 681)</td><td></td></tr>
+<tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>679</td><td>679</td><td>679</td><td>679</td><td>679</td><td>679</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.033</td><td></td><td>0.047</td><td></td><td>0.061</td><td></td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.030</td><td></td><td>0.041</td><td></td><td>0.050</td><td></td></tr>
+<tr><td style="text-align:left">Log Likelihood</td><td></td><td>-1,288.678</td><td></td><td>-1,283.793</td><td></td><td>-1,278.777</td></tr>
+<tr><td style="text-align:left">Akaike Inf. Crit.</td><td></td><td>2,583.356</td><td></td><td>2,577.587</td><td></td><td>2,575.554</td></tr>
+<tr><td style="text-align:left">Residual Std. Error</td><td>1.616 (df = 676)</td><td></td><td>1.606 (df = 674)</td><td></td><td>1.599 (df = 670)</td><td></td></tr>
+<tr><td style="text-align:left">F Statistic</td><td>11.546<sup>***</sup> (df = 2; 676)</td><td></td><td>8.281<sup>***</sup> (df = 4; 674)</td><td></td><td>5.424<sup>***</sup> (df = 8; 670)</td><td></td></tr>
 <tr><td colspan="7" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="6" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
 </table>
