--- a/Results/Tables/E2_Balanced_test.html
+++ b/Results/Tables/E2_Balanced_test.html
@@ -2,53 +2,56 @@
 <table style="text-align:center"><caption><strong>Experiment 2: Balanced test to check Digital CitizenShip and Echo Chamber membership</strong></caption>
 <tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="2">Experimental conditions</td></tr>
 <tr><td></td><td colspan="2" style="border-bottom: 1px solid black"></td></tr>
-<tr><td style="text-align:left"></td><td>Afin</td><td>Opuesto</td></tr>
+<tr><td style="text-align:left"></td><td>Control</td><td>Opuesto</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td></tr>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">High Echo Chamber</td><td>-0.219</td><td>0.150</td></tr>
-<tr><td style="text-align:left"></td><td>(0.203)</td><td>(0.205)</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">High Echo Chamber</td><td>0.214</td><td>0.355</td></tr>
+<tr><td style="text-align:left"></td><td>(0.204)</td><td>(0.205)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">High Digital Citizenship</td><td>0.482<sup>*</sup></td><td>0.122</td></tr>
-<tr><td style="text-align:left"></td><td>(0.211)</td><td>(0.209)</td></tr>
+<tr><td style="text-align:left">High Digital Citizenship</td><td>-0.496<sup>*</sup></td><td>-0.398</td></tr>
+<tr><td style="text-align:left"></td><td>(0.212)</td><td>(0.215)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Men</td><td>-0.214</td><td>-0.100</td></tr>
-<tr><td style="text-align:left"></td><td>(0.198)</td><td>(0.198)</td></tr>
+<tr><td style="text-align:left">Men</td><td>0.206</td><td>0.106</td></tr>
+<tr><td style="text-align:left"></td><td>(0.198)</td><td>(0.200)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Other</td><td>0.998</td><td>1.305</td></tr>
-<tr><td style="text-align:left"></td><td>(1.167)</td><td>(1.130)</td></tr>
+<tr><td style="text-align:left">30 to 40 years</td><td>-0.365</td><td>0.212</td></tr>
+<tr><td style="text-align:left"></td><td>(0.271)</td><td>(0.272)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">30 to 40 years</td><td>0.458</td><td>0.543<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.262)</td><td>(0.265)</td></tr>
+<tr><td style="text-align:left">41 to 65 years</td><td>-0.137</td><td>0.091</td></tr>
+<tr><td style="text-align:left"></td><td>(0.271)</td><td>(0.283)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">41 to 65 years</td><td>0.241</td><td>0.207</td></tr>
-<tr><td style="text-align:left"></td><td>(0.263)</td><td>(0.269)</td></tr>
+<tr><td style="text-align:left">+65 years</td><td>-0.175</td><td>0.402</td></tr>
+<tr><td style="text-align:left"></td><td>(0.308)</td><td>(0.307)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">+65 years</td><td>0.276</td><td>0.526</td></tr>
-<tr><td style="text-align:left"></td><td>(0.299)</td><td>(0.294)</td></tr>
+<tr><td style="text-align:left">Low income</td><td>0.154</td><td>-0.110</td></tr>
+<tr><td style="text-align:left"></td><td>(0.448)</td><td>(0.424)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low income</td><td>-0.156</td><td>-0.280</td></tr>
-<tr><td style="text-align:left"></td><td>(0.446)</td><td>(0.434)</td></tr>
+<tr><td style="text-align:left">Low-mid</td><td>0.056</td><td>-0.328</td></tr>
+<tr><td style="text-align:left"></td><td>(0.420)</td><td>(0.396)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Low-mid</td><td>-0.013</td><td>-0.369</td></tr>
-<tr><td style="text-align:left"></td><td>(0.418)</td><td>(0.411)</td></tr>
+<tr><td style="text-align:left">Mid-High income</td><td>0.543</td><td>-0.178</td></tr>
+<tr><td style="text-align:left"></td><td>(0.433)</td><td>(0.415)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Mid-High income</td><td>-0.516</td><td>-0.743</td></tr>
-<tr><td style="text-align:left"></td><td>(0.430)</td><td>(0.420)</td></tr>
+<tr><td style="text-align:left">Highest</td><td>0.637</td><td>0.768</td></tr>
+<tr><td style="text-align:left"></td><td>(0.609)</td><td>(0.566)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Highest</td><td>-0.623</td><td>0.060</td></tr>
-<tr><td style="text-align:left"></td><td>(0.600)</td><td>(0.536)</td></tr>
+<tr><td style="text-align:left">Center wing</td><td>0.362</td><td>0.039</td></tr>
+<tr><td style="text-align:left"></td><td>(0.346)</td><td>(0.334)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Center wing</td><td>0.384</td><td>0.297</td></tr>
-<tr><td style="text-align:left"></td><td>(0.342)</td><td>(0.345)</td></tr>
+<tr><td style="text-align:left">Right-Wing</td><td>-0.299</td><td>-0.171</td></tr>
+<tr><td style="text-align:left"></td><td>(0.466)</td><td>(0.443)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Right-Wing</td><td>0.638</td><td>0.420</td></tr>
-<tr><td style="text-align:left"></td><td>(0.387)</td><td>(0.394)</td></tr>
+<tr><td style="text-align:left">Left-wing</td><td>0.242</td><td>0.025</td></tr>
+<tr><td style="text-align:left"></td><td>(0.342)</td><td>(0.331)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Left-wing</td><td>0.105</td><td>0.076</td></tr>
-<tr><td style="text-align:left"></td><td>(0.218)</td><td>(0.219)</td></tr>
+<tr><td style="text-align:left">Undergraduate</td><td>-0.142</td><td>-0.105</td></tr>
+<tr><td style="text-align:left"></td><td>(0.242)</td><td>(0.244)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>-0.233</td><td>-0.103</td></tr>
-<tr><td style="text-align:left"></td><td>(0.423)</td><td>(0.412)</td></tr>
+<tr><td style="text-align:left">Graduate</td><td>-0.185</td><td>-0.505</td></tr>
+<tr><td style="text-align:left"></td><td>(0.347)</td><td>(0.362)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Akaike Inf. Crit.</td><td>1,543.632</td><td>1,543.632</td></tr>
+<tr><td style="text-align:left">Constant</td><td>-0.083</td><td>0.126</td></tr>
+<tr><td style="text-align:left"></td><td>(0.534)</td><td>(0.510)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Akaike Inf. Crit.</td><td>1,523.850</td><td>1,523.850</td></tr>
 <tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Significance levels</td><td colspan="2" style="text-align:right"><sup>*</sup>p<0.05; <sup>**</sup>p<0.01; <sup>***</sup>p<0.001</td></tr>
 </table>
